--- a/robotrace_v1/robotrace_v1.ioc
+++ b/robotrace_v1/robotrace_v1.ioc
@@ -287,8 +287,9 @@ PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=Input1
 PC8.Locked=true
 PC8.Signal=GPIO_Input
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC9.GPIO_Label=SW_MSD
+PC9.GPIO_PuPd=GPIO_PULLUP
 PC9.Locked=true
 PC9.Signal=GPIO_Input
 PD2.Mode=Asynchronous
