--- a/robotrace_v1/robotrace_v1.ioc
+++ b/robotrace_v1/robotrace_v1.ioc
@@ -91,7 +91,8 @@ Mcu.IP11=TIM2
 Mcu.IP12=TIM3
 Mcu.IP13=TIM4
 Mcu.IP14=TIM6
-Mcu.IP15=UART5
+Mcu.IP15=TIM7
+Mcu.IP16=UART5
 Mcu.IP2=DMA
 Mcu.IP3=FATFS
 Mcu.IP4=I2C1
@@ -100,7 +101,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI2
 Mcu.IP8=SPI3
 Mcu.IP9=SYS
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -152,11 +153,12 @@ Mcu.Pin5=PC0
 Mcu.Pin50=VP_FATFS_VS_Generic
 Mcu.Pin51=VP_SYS_VS_Systick
 Mcu.Pin52=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=53
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -175,6 +177,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
@@ -472,6 +475,9 @@ TIM4.IPParameters=EncoderMode,IC2Polarity
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=7499
 TIM6.Prescaler=11
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=749
+TIM7.Prescaler=11
 UART5.IPParameters=VirtualMode
 UART5.VirtualMode=Asynchronous
 VP_FATFS_VS_Generic.Mode=User_defined
@@ -480,6 +486,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
 isbadioc=false
