--- a/robotrace_v1/robotrace_v1.ioc
+++ b/robotrace_v1/robotrace_v1.ioc
@@ -60,6 +60,9 @@ ADC2.Rank-1\#ChannelRegularConversion=2
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC2.ScanConvMode=ENABLE
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.0.Instance=DMA2_Stream0
@@ -331,7 +334,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_UART5_Init-UART5-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_SPI3_Init-SPI3-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_ADC2_Init-ADC2-false-HAL-true,15-MX_FATFS_Init-FATFS-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_UART5_Init-UART5-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_SPI3_Init-SPI3-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_ADC2_Init-ADC2-false-HAL-true,15-MX_FATFS_Init-FATFS-false-HAL-false,16-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -445,8 +448,8 @@ SPI2.FirstBit=SPI_FIRSTBIT_MSB
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,FirstBit,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI3.CalculateBaudRate=11.25 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI3.CalculateBaudRate=22.5 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
