マーカー区間ごとに曲率半径を算出できるようにした

--- a/robotrace_v1/robotrace_v1.ioc
+++ b/robotrace_v1/robotrace_v1.ioc
@@ -182,8 +182,9 @@ PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
 PA10.Signal=S_TIM1_CH3
 PA11.Signal=S_TIM1_CH4
-PA12.GPIOParameters=PinState,GPIO_Label
+PA12.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PA12.GPIO_Label=LED_R
+PA12.GPIO_PuPd=GPIO_PULLUP
 PA12.Locked=true
 PA12.PinState=GPIO_PIN_SET
 PA12.Signal=GPIO_Output
@@ -216,13 +217,15 @@ PB1.Locked=true
 PB1.Signal=GPIO_Input
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
-PB12.GPIOParameters=PinState,GPIO_Label
+PB12.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=CS_IMU
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
-PB13.GPIOParameters=PinState,GPIO_Label
+PB13.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB13.GPIO_Label=CS_MSD
+PB13.GPIO_PuPd=GPIO_PULLUP
 PB13.Locked=true
 PB13.PinState=GPIO_PIN_SET
 PB13.Signal=GPIO_Output
@@ -230,8 +233,9 @@ PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB2.GPIO_Label=Input2
+PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
@@ -239,13 +243,15 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
-PB4.GPIOParameters=PinState,GPIO_Label
+PB4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB4.GPIO_Label=LED_G
+PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
 PB4.PinState=GPIO_PIN_SET
 PB4.Signal=GPIO_Output
-PB5.GPIOParameters=PinState,GPIO_Label
+PB5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=LED_B
+PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
 PB6.Signal=S_TIM4_CH1
@@ -269,12 +275,14 @@ PC13.GPIO_Label=Sidesensor1
 PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
 PC13.Signal=GPIO_Input
-PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC14-OSC32_IN.GPIO_Label=Output1
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
-PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=Output2
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=GPIO_Output
 PC2.Signal=ADCx_IN12
@@ -285,8 +293,9 @@ PC5.Locked=true
 PC5.Signal=ADCx_IN15
 PC6.Signal=S_TIM3_CH1
 PC7.Signal=S_TIM3_CH2
-PC8.GPIOParameters=GPIO_Label
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC8.GPIO_Label=Input1
+PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.Locked=true
 PC8.Signal=GPIO_Input
 PC9.GPIOParameters=GPIO_PuPd,GPIO_Label
