--- a/robotrace_v1/robotrace_v1.ioc
+++ b/robotrace_v1/robotrace_v1.ioc
@@ -77,8 +77,9 @@ Dma.Request0=ADC1
 Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.DutyCycle=I2C_DUTYCYCLE_2
 I2C1.I2C_Mode=I2C_Fast
-I2C1.IPParameters=I2C_Mode,NoStretchMode
+I2C1.IPParameters=I2C_Mode,NoStretchMode,DutyCycle
 I2C1.NoStretchMode=I2C_NOSTRETCH_ENABLE
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
