--- a/robotrace_v1/robotrace_v1.ioc
+++ b/robotrace_v1/robotrace_v1.ioc
@@ -162,8 +162,8 @@ Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=6.7.0
-MxDb.Version=DB.6.0.70
+MxCube.Version=6.8.0
+MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -335,6 +335,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=robotrace_v1.ioc
 ProjectManager.ProjectName=robotrace_v1
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -471,7 +472,7 @@ TIM1.Period=499
 TIM1.Prescaler=11
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,TIM_MasterOutputTrigger
-TIM2.Period=335
+TIM2.Period=674
 TIM2.Prescaler=11
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
