--- a/robotrace_v1/robotrace_v1.ioc
+++ b/robotrace_v1/robotrace_v1.ioc
@@ -11,12 +11,14 @@ ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.ContinuousConvMode=ENABLE
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_TRGO
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion,DMAContinuousRequests,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,DiscontinuousConvMode,Mode
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion,DMAContinuousRequests,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,DiscontinuousConvMode,Mode,ClockPrescaler,EOCSelection
 ADC1.InjNumberOfConversion=0
 ADC1.Mode=__NULL
 ADC1.NbrOfConversion=12
@@ -49,10 +51,9 @@ ADC1.ScanConvMode=ENABLE
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_15
-ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC2.ContinuousConvMode=ENABLE
 ADC2.EOCSelection=ADC_EOC_SINGLE_CONV
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion,EOCSelection,ClockPrescaler
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion,EOCSelection
 ADC2.NbrOfConversion=2
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
@@ -234,9 +235,8 @@ PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=Input2
-PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
@@ -401,9 +401,8 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
-SH.ADCx_IN10.0=ADC1_IN10
-SH.ADCx_IN10.1=ADC2_IN10,IN10
-SH.ADCx_IN10.ConfNb=2
+SH.ADCx_IN10.0=ADC2_IN10,IN10
+SH.ADCx_IN10.ConfNb=1
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
 SH.ADCx_IN12.0=ADC1_IN12,IN12
@@ -411,11 +410,9 @@ SH.ADCx_IN12.ConfNb=1
 SH.ADCx_IN13.0=ADC1_IN13,IN13
 SH.ADCx_IN13.ConfNb=1
 SH.ADCx_IN14.0=ADC1_IN14,IN14
-SH.ADCx_IN14.1=ADC2_IN14
-SH.ADCx_IN14.ConfNb=2
-SH.ADCx_IN15.0=ADC1_IN15
-SH.ADCx_IN15.1=ADC2_IN15,IN15
-SH.ADCx_IN15.ConfNb=2
+SH.ADCx_IN14.ConfNb=1
+SH.ADCx_IN15.0=ADC2_IN15,IN15
+SH.ADCx_IN15.ConfNb=1
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN3.0=ADC1_IN3,IN3
@@ -470,9 +467,11 @@ TIM1.OC3Preload_PWM=DISABLE
 TIM1.OC4Preload_PWM=DISABLE
 TIM1.Period=499
 TIM1.Prescaler=11
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,TIM_MasterOutputTrigger
-TIM2.Period=674
+TIM2.CounterMode=TIM_COUNTERMODE_UP
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,TIM_MasterOutputTrigger,CounterMode,AutoReloadPreload
+TIM2.Period=1124
 TIM2.Prescaler=11
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
